# routes/api.php
@@ -1,8 +1,7 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\Api\HealthController;
 
-
-Route::get('/health', [HealthController::class, 'index']);
+Route::prefix('v1')->group(function () {
+    require base_path('routes/api/v1.php');
+});
